# timproject

./: pyproject.toml
.github/workflows/: test-project.yml
tests/: test_bar.py
timpackage/: foo.py
